[package]
name = "glutin-sample"
version = "0.1.0"
authors = ["Schwaggot <tom.ryan@posteo.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.22.0-alpha4"
image = "0.21"

[build-dependencies]
gl_generator = "0.13"